--- a/src/styleguide.html
+++ b/src/styleguide.html
@@ -1,43 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Links&Banners Panel</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/css/bootstrap.min.css"
+    integrity="sha384-VCmXjywReHh4PwowAiWNagnWcLhlEJLA5buUprzK8rxFgeH0kww/aWY76TfkUoSX" crossorigin="anonymous">
+  <link rel="stylesheet" href="./vendor/css/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
   <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h1>
-<h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
-<h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-<h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
-<h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h5>
-<h6>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h6>
-<p>Lorem ipsum dolor sit amet, consectetur <strong>adipiscing elit</strong>. Maecenas blandit diam urna, eu <a href="#">dignissim</a> ex dignissim consequat. Duis porta lectus lorem, quis eleifend justo scelerisque eget. Duis ac sem et turpis tincidunt molestie in non ipsum. Maecenas ut augue erat. Phasellus eu est commodo est hendrerit tempor. Mauris dignissim ex vel magna aliquet, sit amet facilisis turpis tincidunt. Fusce quis blandit libero, sed dapibus nisl. Pellentesque vitae ligula sed tellus sagittis dapibus eu non metus. Mauris rutrum ligula ut sapien varius, pellentesque volutpat diam porta. Ut at nunc ac tortor dapibus sodales id at leo. Nunc posuere lorem non feugiat elementum. Nunc sagittis diam justo, nec malesuada sapien tristique id. Vivamus in consequat nibh. Etiam tempor id ligula a dapibus. Proin vitae arcu nulla.</p>
-<a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</a>
-<ul>
-  <li>Lorem ipsum dolor, consectetur <a href="#">consectetur adipiscing elit.</a>.</li>
-  <li>Lorem ipsum dolor <strong>sit amet</strong></li>
-  <li>Lorem ipsum dolor <strong>sit amet</strong>, consectetur <a href="#">consectetur adipiscing elit.</a>.</li>
-</ul>
-<ol>
-  <li>Lorem ipsum dolor, consectetur <a href="#">consectetur adipiscing elit.</a>.</li>
-  <li>Lorem ipsum dolor <strong>sit amet</strong></li>
-  <li>Lorem ipsum dolor <strong>sit amet</strong>, consectetur <a href="#">consectetur adipiscing elit.</a>.</li>
-</ol>
-<!-- Jeśli będziemy stylować treść artykułu, to powinniśmy ją testować w ramach grida na dużej liczbie kolumn, lecz jeśli przygotowujemy zawartość sidebara, to lepiej pomyśleć o tym, by ograniczyć nasz testowy grid do 3-4 kolumn. -->
+  <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
+  <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+  <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
+  <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h5>
+  <h6>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h6>
+  <p>Lorem ipsum dolor sit amet, consectetur <strong>adipiscing elit</strong>. Maecenas blandit diam urna, eu <a
+      href="#">dignissim</a> ex dignissim consequat. Duis porta lectus lorem, quis eleifend justo scelerisque eget. Duis
+    ac sem et turpis tincidunt molestie in non ipsum. Maecenas ut augue erat. Phasellus eu est commodo est hendrerit
+    tempor. Mauris dignissim ex vel magna aliquet, sit amet facilisis turpis tincidunt. Fusce quis blandit libero, sed
+    dapibus nisl. Pellentesque vitae ligula sed tellus sagittis dapibus eu non metus. Mauris rutrum ligula ut sapien
+    varius, pellentesque volutpat diam porta. Ut at nunc ac tortor dapibus sodales id at leo. Nunc posuere lorem non
+    feugiat elementum. Nunc sagittis diam justo, nec malesuada sapien tristique id. Vivamus in consequat nibh. Etiam
+    tempor id ligula a dapibus. Proin vitae arcu nulla.</p>
+  <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</a>
+  <ul>
+    <li>Lorem ipsum dolor, consectetur <a href="#">consectetur adipiscing elit.</a>.</li>
+    <li>Lorem ipsum dolor <strong>sit amet</strong></li>
+    <li>Lorem ipsum dolor <strong>sit amet</strong>, consectetur <a href="#">consectetur adipiscing elit.</a>.</li>
+  </ul>
+  <ol>
+    <li>Lorem ipsum dolor, consectetur <a href="#">consectetur adipiscing elit.</a>.</li>
+    <li>Lorem ipsum dolor <strong>sit amet</strong></li>
+    <li>Lorem ipsum dolor <strong>sit amet</strong>, consectetur <a href="#">consectetur adipiscing elit.</a>.</li>
+  </ol>
 
-<div class="container">
-  <div class="row">
-    <div class="col-md-4">
-      <div class="form-field">
-      …
+  <!-- Jeśli będziemy stylować treść artykułu, to powinniśmy ją testować w ramach grida na dużej liczbie kolumn, lecz jeśli przygotowujemy zawartość sidebara, to lepiej pomyśleć o tym, by ograniczyć nasz testowy grid do 3-4 kolumn. -->
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <div class="form-field">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia nulla quasi cumque ex totam dolore
+          laudantium laborum. Quod hic veritatis doloribus tenetur ab eligendi, alias incidunt suscipit ea expedita
+          itaque?
+        </div>
       </div>
     </div>
   </div>
-</div>
+
+
+
+  <!-- hamburger -->
+  <button class="hamburger">
+    <span class="hamburger__box">
+      <span class="hamburger__inner"></span>
+    </span>
+  </button>
+
+
+
+  <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+  <script>
+    $("#menu-toggle").click(function (e) {
+      e.preventDefault();
+      $("#wrapper").toggleClass("menuDisplayed")
+    });
+
+  </script>
+  <!-- TODO zaimportować ikony  -->
+  <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
+    integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js"
+    integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous">
+  </script>
+  <script src="./vendor/js/bootstrap.min.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 
-
-
 </html>
+
