--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -23,45 +22,47 @@
     </button>
     <!-- sidebar -->
     <div id="sidebar-wrapper">
-      <ul class="sidebar-nav">
-        <li><a href="#">JUST DO IT </a></li>
-        <li><a href="#"><img src="./images/icons/general.svg" class="icon" alt="icon">
-            General</a></li>
-        <li><a href="#">
-            <img class="icon" src="./images/icons/details.svg" alt="icon">
-            Details</a></li>
-        <li><a href="#">
-            <img src="./images/icons/links.svg" class="icon" alt="icon">
-            Links</a></li>
-        <li><a href="#">
-           <img src="./images/icons/banners.svg" alt="icon" class="icon">
-            Banners</a></li>
-        <li><a href="#">
-           <img src="./images/icons/personaldata.svg" alt="icon" class="icon">
-            Personal data</a></li>
-        <li><a href="#">
-           <img src="./images/icons/payout.svg" alt="icon" class="icon">
-            Payout</a></li>
-        <li><a href="#">
-           <img src="./images/icons/postback.svg" alt="icon" class="icon">
-            Postback</a></li>
-        <li>
-          <hr><a href="#">YOUR MANAGER</a></li>
-      </ul>
+      <div class="sidebar-nav">
+        <a href="#">JUST DO IT </a>
+        <a href="#"><img src="./images/icons/general.svg" class="icon" alt="icon">
+          General</a>
+        <a href="#">
+          <img class="icon" src="./images/icons/details.svg" alt="icon">
+          Details</a>
+        <a href="#">
+          <img src="./images/icons/links.svg" class="icon" alt="icon">
+          Links</a>
+        <a href="#">
+          <img src="./images/icons/banners.svg" alt="icon" class="icon">
+          Banners</a>
+        <a href="#">
+          <img src="./images/icons/personaldata.svg" alt="icon" class="icon">
+          Personal data</a>
+        <a href="#">
+          <img src="./images/icons/payout.svg" alt="icon" class="icon">
+          Payout</a>
+        <a href="#">
+          <img src="./images/icons/postback.svg" alt="icon" class="icon">
+          Postback</a>
+        <hr>
+        <div class="photo">
+          <p>YOUR MANAGER </p><img src="./images/chart.png" alt="" class="photo__manager">
+          <p>Jem Curry</p>
+        </div>
+      </div>
     </div>
     <!-- top bar -->
     <div id="topbar-wrapper">
       <div class="container-fluid">
-        <div class="row">
-          <div class="col">
-            <ul class="topbar-nav">
-              <li><a href="#"> <img src="./images/icons/wallet.svg" alt="" class="icon">1200 
+          <div class="topbar-nav">
+            <a href="#"> <img src="./images/icons/wallet.svg" alt="" class="icon"><span>1200</span>
               <img src="./images/icons/arrow-down.svg" alt="" class="icon"></a>
-            </li>
-            </ul>
+            <a href="#"> <img src="./images/icons/notification.svg" alt="" class="icon"></a>
+            <a href="#"> <img src="./images/icons/profile.svg" alt="" class="icon"><span>Leonardo Di Carpatka</span></a>
+            <a href="#"> <img src="./images/icons/quit.svg" alt="" class="icon"></a>
           </div>
 
-        </div>
+        
 
       </div>
 
@@ -72,12 +73,65 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-lg-12">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus nisi a tempore ullam blanditiis aperiam,
+            nesciunt voluptate iste, voluptates placeat, suscipit perferendis explicabo cupiditate officiis voluptatem
+            repellat quibusdam aliquid debitis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam eligendi
+            quis similique, at ut explicabo id reiciendis enim atque sit ullam cumque odio esse suscipit ipsum
+            doloribus. Suscipit, et vero? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti quia porro
+            modi reiciendis? Animi eveniet distinctio deserunt tenetur, non odio voluptatem, error odit quasi ea sint
+            eaque earum temporibus placeat? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae
+            necessitatibus, odit exercitationem dolore praesentium facere assumenda voluptatibus, sit officiis rem eaque
+            nihil! Architecto nam doloribus eligendi blanditiis! Accusamus, similique! Laudantium! Lorem ipsum dolor
+            sit, amet consectetur adipisicing elit. Voluptate et quas facilis placeat tempore voluptatum nihil. Aliquid,
+            libero repudiandae temporibus distinctio excepturi omnis id labore dolore impedit rem dolor corrupti! Lorem
+            ipsum dolor sit amet consectetur adipisicing elit. Officiis sed provident vero ipsa a non repellat dolor
+            earum rem qui. Possimus quis earum dolores odit esse magni, quia dolorum voluptatum. Lorem ipsum dolor sit
+            amet consectetur adipisicing elit. Animi perspiciatis quae et vitae explicabo nemo, aspernatur consequuntur
+            omnis, ullam assumenda totam debitis nostrum adipisci suscipit. Accusamus possimus voluptatum impedit
+            recusandae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid numquam sed facere magnam
+            veritatis aut optio laudantium alias? Expedita libero quas porro vitae mollitia optio doloribus consectetur
+            doloremque vero necessitatibus? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate dicta
+            officiis corrupti itaque esse, earum explicabo quam. Nisi ullam quod, rem minima, deleniti vel nihil natus,
+            deserunt mollitia neque dolor. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias possimus
+            pariatur eligendi tempore voluptates quod perferendis nemo ea, iste eius, dolore velit enim, nihil maxime
+            nesciunt ipsam quo explicabo. Quae!
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque mollitia totam, repellat, quisquam velit
             dolores non earum autem deleniti nobis eaque vitae nulla. Magnam modi corrupti blanditiis ratione deserunt
             animi?
           </div>
         </div>
+      </div>
 
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-lg-12">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus nisi a tempore ullam blanditiis aperiam,
+            nesciunt voluptate iste, voluptates placeat, suscipit perferendis explicabo cupiditate officiis voluptatem
+            repellat quibusdam aliquid debitis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam eligendi
+            quis similique, at ut explicabo id reiciendis enim atque sit ullam cumque odio esse suscipit ipsum
+            doloribus. Suscipit, et vero? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti quia porro
+            modi reiciendis? Animi eveniet distinctio deserunt tenetur, non odio voluptatem, error odit quasi ea sint
+            eaque earum temporibus placeat? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae
+            necessitatibus, odit exercitationem dolore praesentium facere assumenda voluptatibus, sit officiis rem eaque
+            nihil! Architecto nam doloribus eligendi blanditiis! Accusamus, similique! Laudantium! Lorem ipsum dolor
+            sit, amet consectetur adipisicing elit. Voluptate et quas facilis placeat tempore voluptatum nihil. Aliquid,
+            libero repudiandae temporibus distinctio excepturi omnis id labore dolore impedit rem dolor corrupti! Lorem
+            ipsum dolor sit amet consectetur adipisicing elit. Officiis sed provident vero ipsa a non repellat dolor
+            earum rem qui. Possimus quis earum dolores odit esse magni, quia dolorum voluptatum. Lorem ipsum dolor sit
+            amet consectetur adipisicing elit. Animi perspiciatis quae et vitae explicabo nemo, aspernatur consequuntur
+            omnis, ullam assumenda totam debitis nostrum adipisci suscipit. Accusamus possimus voluptatum impedit
+            recusandae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid numquam sed facere magnam
+            veritatis aut optio laudantium alias? Expedita libero quas porro vitae mollitia optio doloribus consectetur
+            doloremque vero necessitatibus? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate dicta
+            officiis corrupti itaque esse, earum explicabo quam. Nisi ullam quod, rem minima, deleniti vel nihil natus,
+            deserunt mollitia neque dolor. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias possimus
+            pariatur eligendi tempore voluptates quod perferendis nemo ea, iste eius, dolore velit enim, nihil maxime
+            nesciunt ipsam quo explicabo. Quae!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque mollitia totam, repellat, quisquam velit
+            dolores non earum autem deleniti nobis eaque vitae nulla. Magnam modi corrupti blanditiis ratione deserunt
+            animi?
+          </div>
+        </div>
       </div>
 
     </div>
