add html & scss links section

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
           <img class="icon" src="./images/icons/details.svg" alt="icon">
           Details</a>
         <a href="#">
-          <img src="./images/icons/links.svg" class="icon" alt="icon">
+          <img src="./images/icons/linksblack.svg" class="icon" alt="icon">
           Links</a>
         <a href="#">
           <img src="./images/icons/banners.svg" alt="icon" class="icon">
@@ -54,89 +54,124 @@
     <!-- top bar -->
     <div id="topbar-wrapper">
       <div class="container-fluid">
-          <div class="topbar-nav">
-            <a href="#"> <img src="./images/icons/wallet.svg" alt="" class="icon"><span>1200</span>
-              <img src="./images/icons/arrow-down.svg" alt="" class="icon"></a>
-            <a href="#"> <img src="./images/icons/notification.svg" alt="" class="icon"></a>
-            <a href="#"> <img src="./images/icons/profile.svg" alt="" class="icon"><span>Leonardo Di Carpatka</span></a>
-            <a href="#"> <img src="./images/icons/quit.svg" alt="" class="icon"></a>
-          </div>
+        <div class="topbar-nav">
+          <a href="#"> <img src="./images/icons/wallet.svg" alt="" class="icon"><span>1200</span>
+            <img src="./images/icons/arrow-down.svg" alt="" class="icon"></a>
+          <a href="#"> <img src="./images/icons/notification.svg" alt="" class="icon"></a>
+          <a href="#"> <img src="./images/icons/profile.svg" alt="" class="icon"><span>Leonardo Di Carpatka</span></a>
+          <a href="#"> <img src="./images/icons/quit.svg" alt="" class="icon"></a>
+        </div>
 
-        
+
 
       </div>
 
     </div>
-
     <!-- main content -->
     <div id="page-conntent-wrapper">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-lg-12">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus nisi a tempore ullam blanditiis aperiam,
-            nesciunt voluptate iste, voluptates placeat, suscipit perferendis explicabo cupiditate officiis voluptatem
-            repellat quibusdam aliquid debitis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam eligendi
-            quis similique, at ut explicabo id reiciendis enim atque sit ullam cumque odio esse suscipit ipsum
-            doloribus. Suscipit, et vero? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti quia porro
-            modi reiciendis? Animi eveniet distinctio deserunt tenetur, non odio voluptatem, error odit quasi ea sint
-            eaque earum temporibus placeat? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae
-            necessitatibus, odit exercitationem dolore praesentium facere assumenda voluptatibus, sit officiis rem eaque
-            nihil! Architecto nam doloribus eligendi blanditiis! Accusamus, similique! Laudantium! Lorem ipsum dolor
-            sit, amet consectetur adipisicing elit. Voluptate et quas facilis placeat tempore voluptatum nihil. Aliquid,
-            libero repudiandae temporibus distinctio excepturi omnis id labore dolore impedit rem dolor corrupti! Lorem
-            ipsum dolor sit amet consectetur adipisicing elit. Officiis sed provident vero ipsa a non repellat dolor
-            earum rem qui. Possimus quis earum dolores odit esse magni, quia dolorum voluptatum. Lorem ipsum dolor sit
-            amet consectetur adipisicing elit. Animi perspiciatis quae et vitae explicabo nemo, aspernatur consequuntur
-            omnis, ullam assumenda totam debitis nostrum adipisci suscipit. Accusamus possimus voluptatum impedit
-            recusandae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid numquam sed facere magnam
-            veritatis aut optio laudantium alias? Expedita libero quas porro vitae mollitia optio doloribus consectetur
-            doloremque vero necessitatibus? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate dicta
-            officiis corrupti itaque esse, earum explicabo quam. Nisi ullam quod, rem minima, deleniti vel nihil natus,
-            deserunt mollitia neque dolor. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias possimus
-            pariatur eligendi tempore voluptates quod perferendis nemo ea, iste eius, dolore velit enim, nihil maxime
-            nesciunt ipsam quo explicabo. Quae!
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque mollitia totam, repellat, quisquam velit
-            dolores non earum autem deleniti nobis eaque vitae nulla. Magnam modi corrupti blanditiis ratione deserunt
-            animi?
+      <!-- general statistic -->
+      <section class="general_statistic">
+        <div class="container-fluid">
+          <div class="section_header">
+            <h1>General statistic</h1>
           </div>
         </div>
-      </div>
+      </section>
+      <!-- links section -->
+      <section class="links">
+        <div class="container-fluid">
+          <div class="section_header">
+            <h1>Links</h1>
+          </div>
 
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-lg-12">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus nisi a tempore ullam blanditiis aperiam,
-            nesciunt voluptate iste, voluptates placeat, suscipit perferendis explicabo cupiditate officiis voluptatem
-            repellat quibusdam aliquid debitis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam eligendi
-            quis similique, at ut explicabo id reiciendis enim atque sit ullam cumque odio esse suscipit ipsum
-            doloribus. Suscipit, et vero? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti quia porro
-            modi reiciendis? Animi eveniet distinctio deserunt tenetur, non odio voluptatem, error odit quasi ea sint
-            eaque earum temporibus placeat? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae
-            necessitatibus, odit exercitationem dolore praesentium facere assumenda voluptatibus, sit officiis rem eaque
-            nihil! Architecto nam doloribus eligendi blanditiis! Accusamus, similique! Laudantium! Lorem ipsum dolor
-            sit, amet consectetur adipisicing elit. Voluptate et quas facilis placeat tempore voluptatum nihil. Aliquid,
-            libero repudiandae temporibus distinctio excepturi omnis id labore dolore impedit rem dolor corrupti! Lorem
-            ipsum dolor sit amet consectetur adipisicing elit. Officiis sed provident vero ipsa a non repellat dolor
-            earum rem qui. Possimus quis earum dolores odit esse magni, quia dolorum voluptatum. Lorem ipsum dolor sit
-            amet consectetur adipisicing elit. Animi perspiciatis quae et vitae explicabo nemo, aspernatur consequuntur
-            omnis, ullam assumenda totam debitis nostrum adipisci suscipit. Accusamus possimus voluptatum impedit
-            recusandae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid numquam sed facere magnam
-            veritatis aut optio laudantium alias? Expedita libero quas porro vitae mollitia optio doloribus consectetur
-            doloremque vero necessitatibus? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate dicta
-            officiis corrupti itaque esse, earum explicabo quam. Nisi ullam quod, rem minima, deleniti vel nihil natus,
-            deserunt mollitia neque dolor. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias possimus
-            pariatur eligendi tempore voluptates quod perferendis nemo ea, iste eius, dolore velit enim, nihil maxime
-            nesciunt ipsam quo explicabo. Quae!
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque mollitia totam, repellat, quisquam velit
-            dolores non earum autem deleniti nobis eaque vitae nulla. Magnam modi corrupti blanditiis ratione deserunt
-            animi?
+          <div class="links__wrapper">
+            <button type="submit" class="button__orange">+ add new</button>
+            <div class="link">
+              <h3>Home page</h3>
+              <a href="#">http://www.homepage.com</a>
+              <div class="links__icon">
+                <img src="images/icons/links.svg" class="icon" alt="icon">
+                <img src="images/icons/trash.svg" class="icon" alt="icon">
+              </div>
+            </div>
+            <div class="link">
+              <h3>Currently offer</h3>
+              <a href="#">http://www.currently.com</a>
+              <div class="links__icon">
+                <img src="images/icons/links.svg" class="icon" alt="icon">
+                <img src="images/icons/trash.svg" class="icon" alt="icon">
+              </div>
+            </div>
+            <div class="link">
+              <h3>Blurpix</h3>
+              <a href="#">http://www.blurpix.com</a>
+              <div class="links__icon">
+                <img src="images/icons/links.svg" class="icon" alt="icon">
+                <img src="images/icons/trash.svg" class="icon" alt="icon">
+              </div>
+            </div>
+            <div class="link">
+              <h3>Your site</h3>
+              <a href="#">http://www.yoursite.com</a>
+              <div class="links__icon">
+                <img src="images/icons/links.svg" class="icon" alt="icon">
+                <img src="images/icons/trash.svg" class="icon" alt="icon">
+              </div>
+            </div>
+            <div class="link">
+              <h3>Google</h3>
+              <a href="#">http://www.google.com</a>
+              <div class="links__icon">
+                <img src="images/icons/links.svg" class="icon" alt="icon">
+                <img src="images/icons/trash.svg" class="icon" alt="icon">
+              </div>
+            </div>
+            <div class="link">
+              <h3>Facebook</h3>
+              <a href="#">http://www.facebook.com</a>
+              <div class="links__icon">
+                <img src="images/icons/links.svg" class="icon" alt="icon">
+                <img src="images/icons/trash.svg" class="icon" alt="icon">
+              </div>
+            </div>
+            <div class="link">
+              <h3>Dashboard</h3>
+              <a href="#">http://www.dashboard.com</a>
+              <div class="links__icon">
+                <img src="images/icons/links.svg" class="icon" alt="icon">
+                <img src="images/icons/trash.svg" class="icon" alt="icon">
+              </div>
+            </div>
+            <div class="link">
+              <h3>Blurax</h3>
+              <a href="#">http://www.blurax.com</a>
+              <div class="links__icon">
+                <img src="images/icons/links.svg" class="icon" alt="icon">
+                <img src="images/icons/trash.svg" class="icon" alt="icon">
+              </div>
+            </div>
+            <div class="link">
+              <h3>Piece of wine</h3>
+              <a href="#">http://www.pieceofwine.com</a>
+              <div class="links__icon">
+                <img src="images/icons/links.svg" class="icon" alt="icon">
+                <img src="images/icons/trash.svg" class="icon" alt="icon">
+              </div>
+            </div>
+            <div class="link">
+              <h3>Twitter</h3>
+              <a href="#">http://www.twitter.com</a>
+              <div class="links__icon">
+                <img src="images/icons/links.svg" class="icon" alt="icon">
+                <img src="images/icons/trash.svg" class="icon" alt="icon">
+              </div>
+            </div>
+            <button type="submit" class="button__orange">+ add new</button>
           </div>
         </div>
-      </div>
-
+      </section>
     </div>
   </div>
-
   <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
   <script>
     $("#menu-toggle").click(function (e) {
