--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,14 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,700i%7cSource+Sans+Pro" rel="stylesheet">
   <title>Links&Banners Panel</title>
-  <link rel="stylesheet" href="./vendor/css/bootstrap-grid.min.css">
+
+  <link rel="stylesheet" href="./vendor/icons/css/Glyphter.css">
   <link rel="stylesheet" href="./css/style.css">
+
 </head>
 
 <body>
@@ -21,35 +22,37 @@
         <span class="hamburger__inner"></span>
       </span>
     </button>
+
     <!-- sidebar -->
     <div id="sidebar-wrapper">
       <div class="sidebar-nav">
-        <a href="#">JUST DO IT </a>
+        <a href="#"><span>Just do it</span></a>
         <a href="#"><img src="./images/icons/general.svg" class="icon" alt="icon">
-          General</a>
+          <span>General</span></a>
+
         <a href="#">
           <img class="icon" src="./images/icons/details.svg" alt="icon">
-          Details</a>
+          <span>Details</span></a>
         <a href="#">
           <img src="./images/icons/linksblack.svg" class="icon" alt="icon">
-          Links</a>
+          <span>Links</span></a>
         <a href="#">
           <img src="./images/icons/banners.svg" alt="icon" class="icon">
-          Banners</a>
+          <span>Banners</span></a>
         <a href="#">
           <img src="./images/icons/personaldata.svg" alt="icon" class="icon">
-          Personal data</a>
+          <span>Personal data</span></a>
         <a href="#">
           <img src="./images/icons/payout.svg" alt="icon" class="icon">
-          Payout</a>
+          <span>Payout</span></a>
         <a href="#">
           <img src="./images/icons/postback.svg" alt="icon" class="icon">
-          Postback</a>
+          <span>Postback</span></a>
         <hr>
         <div id="manager_box">
           <p>YOUR MANAGER </p>
           <div class="photo">
-            <img src="./images/chart.png" alt="" class="photo__manager">
+            <img src="./images/pexels-pixabay-220453.jpg" alt="" class="photo__manager">
             <div>
               <p>Jem Curry</p>
             </div>
@@ -59,167 +62,157 @@
     </div>
     <!-- top bar -->
     <div id="topbar-wrapper">
-      <div class="container-fluid">
-        <div class="topbar-nav">
-          <a href="#"> <img src="./images/icons/wallet.svg" alt="" class="icon">$1,500.00
-            <img src="./images/icons/arrow-down.svg" alt="" class="icon"></a>
-          <a href="#" id="kropka"> <img src="./images/icons/notification.svg" alt="" class="icon"> </a>
-          <a href="#"> <img src="./images/icons/profile.svg" alt="" class="icon">Leonardo Di Carpatka</a>
-          <a href="#"> <img src="./images/icons/quit.svg" alt="" class="icon"></a>
-        </div>
-      </div>
-
+      <a href="#"> <img src="./images/icons/wallet.svg" alt="" class="icon">$1,500.00
+        <img src="./images/icons/arrow-down.svg" alt="" class="icon"></a>
+      <a href="#" id="kropka"> <img src="./images/icons/notification.svg" alt="" class="icon"> </a>
+      <a href="#"> <img src="./images/icons/profile.svg" alt="" class="icon">Leonardo Di Carpatka</a>
+      <a href="#"> <img src="./images/icons/quit.svg" alt="" class="icon"></a>
     </div>
     <!-- main content -->
-    <div id="page-conntent-wrapper">
+    <div id="page-content-wrapper">
       <!-- general statistic -->
       <section class="general_statistic">
-        <div class="container-fluid">
-          <div class="section_header">
-            <h1>General statistic</h1>
+        <div class="section_header">
+          <h1>General statistic</h1>
+        </div>
+        <div class="dates_form_wrraper">
+          <input type="date" id="select" class="date_picker">
+          <input type="date" id="pick" class="date_picker">
+          <button class="button__refresh"><img src="./images/icons/refresh.svg" alt="" class="icon"></button>
+        </div>
+        <div class="table_wrapper">
+          <div class="table">
+            <h3>Visit Signups</h3>
+            <p>124</p>
           </div>
-          <div class="dates_form_wrraper">
-            <input type="date" id="select" class="date_picker">
-            <input type="date" id="pick" class="date_picker">
-            <button class="button__refresh"><img src="./images/icons/refresh.svg" alt="" class="icon"></button>
+          <div class="table">
+            <h3>Net Deposit</h3>
+            <p>564</p>
           </div>
-          <div class="table_wrapper">
-            <div class="table">
-              <h3>Visit Signups</h3>
-              <p>124</p>
-            </div>
-            <div class="table">
-              <h3>Net Deposit</h3>
-              <p>564</p>
-            </div>
-            <div class="table">
-              <h3>FTD</h3>445
-            </div>
-            <div class="table">
-              <h3>Turn Over</h3>
-              <p>432</p>
-            </div>
-
+          <div class="table">
+            <h3>FTD</h3>445
           </div>
-          <div class="chart_statistic_wrapper">
-            <h3>Earning chart</h3>
-
-
-            <div class="circle_wrapper">
-              <div class="description_1">
-                <div class="circle_1"></div>
-                <p>Signups</p>
-              </div>
-              <div class="description_2">
-                <div class="circle_2"></div>
-                <p>FTD</p>
-              </div>
-              <div class="description_3">
-                <div class="circle_3"></div>
-                <p>Earned</p>
-              </div>
-            </div>
-
+          <div class="table">
+            <h3>Turn Over</h3>
+            <p>432</p>
           </div>
-          <div class="chart_wrapper"><img src="./images/chart.png" alt="chart_general statistic"></div>
 
         </div>
+        <div class="chart_statistic_wrapper">
+          <h3>Earning chart</h3>
+          <div class="circle_wrapper">
+            <div class="description_1">
+              <div class="circle_1"></div>
+              <p>Signups</p>
+            </div>
+            <div class="description_2">
+              <div class="circle_2"></div>
+              <p>FTD</p>
+            </div>
+            <div class="description_3">
+              <div class="circle_3"></div>
+              <p>Earned</p>
+            </div>
+          </div>
+
+        </div>
+        <div class="chart_wrapper"><img src="./images/chart.png" alt="chart_general statistic"></div>
       </section>
       <!-- links section -->
       <section class="links">
-        <div class="container-fluid">
-          <div class="section_header">
-            <h1>Links</h1>
+        <div class="section_header">
+          <h1>Links</h1>
+        </div>
+        <div class="links__wrapper">
+       
+          <button type="submit" class="button__orange">+ add new</button>
+          <div class="link_wrapper">
+            <h3>Home page</h3>
+            <a href="#">http://www.homepage.com</a>
+            <div class="links__icon">
+              <img src="images/icons/links.svg" class="icon" alt="icon">
+              <img src="images/icons/trash.svg" class="icon" alt="icon">
+            </div>
           </div>
-          <div class="links__wrapper">
-            <button type="submit" class="button__orange">+ add new</button>
-            <div class="link">
-              <h3>Home page</h3>
-              <a href="#">http://www.homepage.com</a>
-              <div class="links__icon">
-                <img src="images/icons/links.svg" class="icon" alt="icon">
-                <img src="images/icons/trash.svg" class="icon" alt="icon">
-              </div>
+          <div class="link_wrapper">
+            <h3>Currently offer</h3>
+            <a href="#">http://www.currently.com</a>
+            <div class="links__icon">
+              <img src="images/icons/links.svg" class="icon" alt="icon">
+              <img src="images/icons/trash.svg" class="icon" alt="icon">
             </div>
-            <div class="link">
-              <h3>Currently offer</h3>
-              <a href="#">http://www.currently.com</a>
-              <div class="links__icon">
-                <img src="images/icons/links.svg" class="icon" alt="icon">
-                <img src="images/icons/trash.svg" class="icon" alt="icon">
-              </div>
-            </div>
-            <div class="link">
-              <h3>Blurpix</h3>
-              <a href="#">http://www.blurpix.com</a>
-              <div class="links__icon">
-                <img src="images/icons/links.svg" class="icon" alt="icon">
-                <img src="images/icons/trash.svg" class="icon" alt="icon">
-              </div>
-            </div>
-            <div class="link">
-              <h3>Your site</h3>
-              <a href="#">http://www.yoursite.com</a>
-              <div class="links__icon">
-                <img src="images/icons/links.svg" class="icon" alt="icon">
-                <img src="images/icons/trash.svg" class="icon" alt="icon">
-              </div>
-            </div>
-            <div class="link">
-              <h3>Google</h3>
-              <a href="#">http://www.google.com</a>
-              <div class="links__icon">
-                <img src="images/icons/links.svg" class="icon" alt="icon">
-                <img src="images/icons/trash.svg" class="icon" alt="icon">
-              </div>
-            </div>
-            <div class="link">
-              <h3>Facebook</h3>
-              <a href="#">http://www.facebook.com</a>
-              <div class="links__icon">
-                <img src="images/icons/links.svg" class="icon" alt="icon">
-                <img src="images/icons/trash.svg" class="icon" alt="icon">
-              </div>
-            </div>
-            <div class="link">
-              <h3>Dashboard</h3>
-              <a href="#">http://www.dashboard.com</a>
-              <div class="links__icon">
-                <img src="images/icons/links.svg" class="icon" alt="icon">
-                <img src="images/icons/trash.svg" class="icon" alt="icon">
-              </div>
-            </div>
-            <div class="link">
-              <h3>Blurax</h3>
-              <a href="#">http://www.blurax.com</a>
-              <div class="links__icon">
-                <img src="images/icons/links.svg" class="icon" alt="icon">
-                <img src="images/icons/trash.svg" class="icon" alt="icon">
-              </div>
-            </div>
-            <div class="link">
-              <h3>Piece of wine</h3>
-              <a href="#">http://www.pieceofwine.com</a>
-              <div class="links__icon">
-                <img src="images/icons/links.svg" class="icon" alt="icon">
-                <img src="images/icons/trash.svg" class="icon" alt="icon">
-              </div>
-            </div>
-            <div class="link">
-              <h3>Twitter</h3>
-              <a href="#">http://www.twitter.com</a>
-              <div class="links__icon">
-                <img src="images/icons/links.svg" class="icon" alt="icon">
-                <img src="images/icons/trash.svg" class="icon" alt="icon">
-              </div>
-            </div>
-            <button type="submit" class="button__orange">+ add new</button>
           </div>
+          <div class="link_wrapper">
+            <h3>Blurpix</h3>
+            <a href="#">http://www.blurpix.com</a>
+            <div class="links__icon">
+              <img src="images/icons/links.svg" class="icon" alt="icon">
+              <img src="images/icons/trash.svg" class="icon" alt="icon">
+            </div>
+          </div>
+          <div class="link_wrapper">
+            <h3>Your site</h3>
+            <a href="#">http://www.yoursite.com</a>
+            <div class="links__icon">
+              <img src="images/icons/links.svg" class="icon" alt="icon">
+              <img src="images/icons/trash.svg" class="icon" alt="icon">
+            </div>
+          </div>
+          <div class="link_wrapper">
+            <h3>Google</h3>
+            <a href="#">http://www.google.com</a>
+            <div class="links__icon">
+              <img src="images/icons/links.svg" class="icon" alt="icon">
+              <img src="images/icons/trash.svg" class="icon" alt="icon">
+            </div>
+          </div>
+          <div class="link_wrapper">
+            <h3>Facebook</h3>
+            <a href="#">http://www.facebook.com</a>
+            <div class="links__icon">
+              <img src="images/icons/links.svg" class="icon" alt="icon">
+              <img src="images/icons/trash.svg" class="icon" alt="icon">
+            </div>
+          </div>
+          <div class="link_wrapper">
+            <h3>Dashboard</h3>
+            <a href="#">http://www.dashboard.com</a>
+            <div class="links__icon">
+              <img src="images/icons/links.svg" class="icon" alt="icon">
+              <img src="images/icons/trash.svg" class="icon" alt="icon">
+            </div>
+          </div>
+          <div class="link_wrapper">
+            <h3>Blurax</h3>
+            <a href="#">http://www.blurax.com</a>
+            <div class="links__icon">
+              <img src="images/icons/links.svg" class="icon" alt="icon">
+              <img src="images/icons/trash.svg" class="icon" alt="icon">
+            </div>
+          </div>
+          <div class="link_wrapper">
+            <h3>Piece of wine</h3>
+            <a href="#">http://www.pieceofwine.com</a>
+            <div class="links__icon">
+              <img src="images/icons/links.svg" class="icon" alt="icon">
+              <img src="images/icons/trash.svg" class="icon" alt="icon">
+            </div>
+          </div>
+          <div class="link_wrapper">
+            <h3>Twitter</h3>
+            <a href="#">http://www.twitter.com</a>
+            <div class="links__icon">
+              <img src="images/icons/links.svg" class="icon" alt="icon">
+              <img src="images/icons/trash.svg" class="icon" alt="icon">
+            </div>
+          </div>
+          <button type="submit" class="button__orange">+ add new</button>
         </div>
       </section>
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+
   <script>
     $("#menu-toggle").click(function (e) {
       e.preventDefault();
@@ -227,13 +220,6 @@
     });
 
   </script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
-    integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous">
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js"
-    integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous">
-  </script>
-  <script src="./vendor/js/bootstrap.min.js"></script>
   <script src="./js/script.js"></script>
 
 </body>
