add new sections: banners&personal data add @media

--- a/src/index.html
+++ b/src/index.html
@@ -27,32 +27,38 @@
     <div id="sidebar-wrapper">
       <div class="sidebar-nav">
         <a href="#"><span>Just do it</span></a>
-        <a href="#general" class="active"><img src="./images/icons/general.svg" class="icon" alt="icon">
+        <a href="#general" class="active"><i class="icon-general icon"></i>
           <span>General</span></a>
 
         <a href="#details">
-          <img class="icon" src="./images/icons/details.svg" alt="icon">
+          <i class="icon-details icon"></i>
           <span>Details</span></a>
         <a href="#links">
-          <img src="./images/icons/linksblack.svg" class="icon" alt="icon">
+          <i class="icon-links icon"></i>
           <span>Links</span></a>
-        <a href="#">
-          <img src="./images/icons/banners.svg" alt="icon" class="icon">
+        <a href="#banners">
+          <i class="icon-banners icon"></i>
           <span>Banners</span></a>
-        <a href="#">
-          <img src="./images/icons/personaldata.svg" alt="icon" class="icon">
+        <a href="personal_data">
+          <i class="icon-personaldata icon"></i>
           <span>Personal data</span></a>
         <a href="#">
-          <img src="./images/icons/payout.svg" alt="icon" class="icon">
+          <i class="icon-payout icon"></i>
           <span>Payout</span></a>
         <a href="#">
-          <img src="./images/icons/postback.svg" alt="icon" class="icon">
+          <i class="icon-postback icon"></i>
           <span>Postback</span></a>
+        <hr>
+        <a href="#"> <i class="icon-wallet icon"></i><span>$1,500.00</span>
+          <i class="icon-arrow-down-small icon"></i></a>
+        <a href="#"> <i class="icon-notification icon"></i> </a>
+        <a href="#"> <i class="icon-arrow-down-small icon"></i><span>Leonardo Di Carpatka</span></a>
+        <a href="#"> <i class="icon-quit icon"></i></a>
         <hr>
         <div id="manager_box">
           <p>YOUR MANAGER </p>
           <div class="photo">
-            <img src="./images/pexels-pixabay-220453.jpg" alt="" class="photo__manager">
+            <img src="./images/pexels-pixabay-220453.jpg" alt="manager" class="photo__manager">
             <div>
               <p>Jem Curry</p>
             </div>
@@ -62,11 +68,11 @@
     </div>
     <!-- top bar -->
     <div id="topbar-wrapper">
-      <a href="#"> <img src="./images/icons/wallet.svg" alt="" class="icon">$1,500.00
-        <img src="./images/icons/arrow-down.svg" alt="" class="icon"></a>
-      <a href="#" id="kropka"> <img src="./images/icons/notification.svg" alt="" class="icon"> </a>
-      <a href="#"> <img src="./images/icons/profile.svg" alt="" class="icon">Leonardo Di Carpatka</a>
-      <a href="#"> <img src="./images/icons/quit.svg" alt="" class="icon"></a>
+      <a href="#"> <i class="icon-wallet icon"></i>$1,500.00
+        <i class="icon-arrow-down-small icon"></i></a>
+      <a href="#" id="kropka"> <i class="icon-notification icon"></i> </a>
+      <a href="#"> <i class="icon-arrow-down-small icon"></i>Leonardo Di Carpatka</a>
+      <a href="#"> <i class="icon-quit icon"></i></a>
     </div>
     <!-- main content -->
     <div id="page-content-wrapper">
@@ -78,7 +84,7 @@
         <div class="dates_form_wrraper">
           <input type="date" id="select" class="date_picker">
           <input type="date" id="pick" class="date_picker">
-          <button class="button__refresh"><img src="./images/icons/refresh.svg" alt="" class="icon"></button>
+          <button class="button__refresh"><i class="icon-refresh icon"></i></button>
         </div>
         <div class="table_wrapper">
           <div class="table">
@@ -116,7 +122,7 @@
           </div>
 
         </div>
-        <div class="chart_wrapper"><img src="./images/chart.png" alt="chart_general statistic"></div>
+        <div class="chart_wrapper"><img src="images/chart.png" alt="chart"></div>
       </section>
       <!-- links section -->
       <section class="links" id="links">
@@ -130,84 +136,188 @@
             <h3>Home page</h3>
             <a href="#">http://www.homepage.com</a>
             <div class="links__icon">
-              <img src="images/icons/links.svg" class="icon" alt="icon">
-              <img src="images/icons/trash.svg" class="icon" alt="icon">
+              <i class="icon-links icon"></i>
+              <i class="icon-links icon"></i>
             </div>
           </div>
           <div class="link_wrapper">
             <h3>Currently offer</h3>
             <a href="#">http://www.currently.com</a>
             <div class="links__icon">
-              <img src="images/icons/links.svg" class="icon" alt="icon">
-              <img src="images/icons/trash.svg" class="icon" alt="icon">
+              <i class="icon-links icon"></i>
+              <i class="icon-links icon"></i>
             </div>
           </div>
           <div class="link_wrapper">
             <h3>Blurpix</h3>
             <a href="#">http://www.blurpix.com</a>
             <div class="links__icon">
-              <img src="images/icons/links.svg" class="icon" alt="icon">
-              <img src="images/icons/trash.svg" class="icon" alt="icon">
+              <i class="icon-links icon"></i>
+              <i class="icon-links icon"></i>
             </div>
           </div>
           <div class="link_wrapper">
             <h3>Your site</h3>
             <a href="#">http://www.yoursite.com</a>
             <div class="links__icon">
-              <img src="images/icons/links.svg" class="icon" alt="icon">
-              <img src="images/icons/trash.svg" class="icon" alt="icon">
+              <i class="icon-links icon"></i>
+              <i class="icon-links icon"></i>
             </div>
           </div>
           <div class="link_wrapper">
             <h3>Google</h3>
             <a href="#">http://www.google.com</a>
             <div class="links__icon">
-              <img src="images/icons/links.svg" class="icon" alt="icon">
-              <img src="images/icons/trash.svg" class="icon" alt="icon">
+              <i class="icon-links icon"></i>
+              <i class="icon-links icon"></i>
             </div>
           </div>
           <div class="link_wrapper">
             <h3>Facebook</h3>
             <a href="#">http://www.facebook.com</a>
             <div class="links__icon">
-              <img src="images/icons/links.svg" class="icon" alt="icon">
-              <img src="images/icons/trash.svg" class="icon" alt="icon">
+              <i class="icon-links icon"></i>
+              <i class="icon-links icon"></i>
             </div>
           </div>
           <div class="link_wrapper">
             <h3>Dashboard</h3>
             <a href="#">http://www.dashboard.com</a>
             <div class="links__icon">
-              <img src="images/icons/links.svg" class="icon" alt="icon">
-              <img src="images/icons/trash.svg" class="icon" alt="icon">
+              <i class="icon-links icon"></i>
+              <i class="icon-links icon"></i>
             </div>
           </div>
           <div class="link_wrapper">
             <h3>Blurax</h3>
             <a href="#">http://www.blurax.com</a>
             <div class="links__icon">
-              <img src="images/icons/links.svg" class="icon" alt="icon">
-              <img src="images/icons/trash.svg" class="icon" alt="icon">
+              <i class="icon-links icon"></i>
+              <i class="icon-links icon"></i>
             </div>
           </div>
           <div class="link_wrapper">
             <h3>Piece of wine</h3>
             <a href="#">http://www.pieceofwine.com</a>
             <div class="links__icon">
-              <img src="images/icons/links.svg" class="icon" alt="icon">
-              <img src="images/icons/trash.svg" class="icon" alt="icon">
+              <i class="icon-links icon"></i>
+              <i class="icon-links icon"></i>
             </div>
           </div>
           <div class="link_wrapper">
             <h3>Twitter</h3>
             <a href="#">http://www.twitter.com</a>
             <div class="links__icon">
-              <img src="images/icons/links.svg" class="icon" alt="icon">
-              <img src="images/icons/trash.svg" class="icon" alt="icon">
+              <i class="icon-links icon"></i>
+              <i class="icon-links icon"></i>
             </div>
           </div>
           <button type="submit" class="button__orange">+ add new</button>
         </div>
+      </section>
+      <!-- banners section -->
+      <section class="banners" id="banners">
+        <div class="section_header">
+          <h1>Banners</h1>
+        </div>
+        <div class="links__wrapper">
+
+          <button type="submit" class="button__orange">+ add new</button>
+          <div class="link_wrapper">
+            <h3>Google</h3>
+            <a href="#">http://www.google.com</a>
+            <div class="links__icon">
+              <i class="icon-links icon"></i>
+              <i class="icon-links icon"></i>
+            </div>
+          </div>
+          <div class="link_wrapper">
+            <h3>Facebook</h3>
+            <a href="#">http://www.facebook.com</a>
+            <div class="links__icon">
+              <i class="icon-links icon"></i>
+              <i class="icon-links icon"></i>
+            </div>
+          </div>
+          <div class="link_wrapper">
+            <h3>Dashboard</h3>
+            <a href="#">http://www.dashboard.com</a>
+            <div class="links__icon">
+              <i class="icon-links icon"></i>
+              <i class="icon-links icon"></i>
+            </div>
+          </div>
+          <div class="link_wrapper">
+            <h3>Blurax</h3>
+            <a href="#">http://www.blurax.com</a>
+            <div class="links__icon">
+              <i class="icon-links icon"></i>
+              <i class="icon-links icon"></i>
+            </div>
+          </div>
+          <button type="submit" class="button__orange">+ add new</button>
+        </div>
+      </section>
+      <!-- personal data section -->
+      <section class="personal_data" id="personal_data">
+        <div class="section_header">
+          <h1>Personal data</h1>
+        </div>
+        <form>
+          <div class="personal_data_all_wrapper">
+            <div class="personal_data_wrapper">
+              <div class="field">
+                <label>Name</label>
+                <input type="text" name="user-name">
+              </div>
+              <div class="field">
+                <label>Surname</label>
+                <input type="text" name="user-surnname">
+              </div>
+              <div class="field">
+                <label>E-mail</label>
+                <input type="text" name="e-mail">
+              </div>
+              <div class="field">
+                <label>Phone number</label>
+                <input type="text" name="phon-number">
+              </div>
+            </div>
+            <div class="personal_data_wrapper">
+              <div class="field">
+                <label>Skype</label>
+                <input type="text" name="Skype">
+              </div>
+              <div class="field">
+                <label>ICQ</label>
+                <input type="text" name="ICQ">
+              </div>
+              <div class="field">
+                <label>Man</label>
+                <input type="text" name="Man">
+              </div>
+            </div>
+            <div class="personal_data_wrapper">
+              <div class="field">
+                <label>wallet</label>
+                <input type="text" name="wallet">
+              </div>
+            </div>
+            <div class="personal_data_wrapper">
+              <div class="field">
+                <label>Password</label>
+                <input type="text" name="Password">
+              </div>
+              <div class="field">
+                <label>Repeat</label>
+                <input type="text" name="Repeat">
+              </div>
+            </div>
+            <button class="button__orange" type="submit">Save</button>
+          </div>
+        </form>
+
+
       </section>
     </div>
   </div>
